# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
page_loader/: __init__.py  download.py  download_recouces.py  download_resouce.py  download_resouces.py  download_resources.py  making_paths.py  names.py  naming.py  parse_resources.py  raise_errors.py  save_html_page.py
page_loader/scripts/: page_loader.py
page_loader/utils/: making_paths.py
tests/: test_page_loader.py
tests/fixtures/: govuk_page.html  govuk_page_origin.html  nodejs_page_origin.html  page_code.html
